BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/SSI_Development_Plan__c.object-meta.xml
<CustomObject>
    <label>SSI Development Plan</label>
    <nameField>
        <label>SSI Development Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SSI Development Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>