BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Close__c.field-meta.xml
<CustomField>
    <fullName>Close__c</fullName>
    <label>Close</label>
    <length>255</length>
    <type>Text</type>
</CustomField>