BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Demonstration__c.field-meta.xml
<CustomField>
    <fullName>Demonstration__c</fullName>
    <label>Demonstration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>