BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/First_Impression__c.field-meta.xml
<CustomField>
    <fullName>First_Impression__c</fullName>
    <label>First Impression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>