BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/General__c.field-meta.xml
<CustomField>
    <fullName>General__c</fullName>
    <label>General</label>
    <length>255</length>
    <type>Text</type>
</CustomField>