BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Least_Effective_Strategies__c.field-meta.xml
<CustomField>
    <fullName>Least_Effective_Strategies__c</fullName>
    <label>Least Effective Strategies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>