BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Next_Steps_and_Actions__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps_and_Actions__c</fullName>
    <label>Next Steps and Actions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>