BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Prospecting__c.field-meta.xml
<CustomField>
    <fullName>Prospecting__c</fullName>
    <label>Prospecting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>