BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/Qualifying__c.field-meta.xml
<CustomField>
    <fullName>Qualifying__c</fullName>
    <label>Qualifying</label>
    <length>255</length>
    <type>Text</type>
</CustomField>