BradkenProduction/force-app/main/default/objects/SSI_Development_Plan__c/fields/SSI_Testing__c.field-meta.xml
<CustomField>
    <fullName>SSI_Testing__c</fullName>
    <label>SSI Testing</label>
    <referenceTo>SSI_Testing__c</referenceTo>
    <relationshipLabel>SSI Development Plans</relationshipLabel>
    <relationshipName>SSI_Development_Plan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>